--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,7 @@ members = ["day-*"]
 [workspace.dependencies]
 anyhow = "1.0.75"
 nom = "7.1.3"
+
+[profile.flamegraph]
+inherits = "release"
+debug = true
