--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = ["day-*"]
 [workspace.dependencies]
 anyhow = "1.0.75"
 nom = "7.1.3"
+rstest = "0.18.2"
 
 [profile.flamegraph]
 inherits = "release"
