--- a/day-12/Cargo.toml
+++ b/day-12/Cargo.toml
@@ -6,5 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = { workspace = true }
-nom = { workspace = true }
+itertools = "0.12.0"
+memoize = "0.4.1"
+strum = { version = "0.25.0", features = ["derive"] }
+strum_macros = "0.25.3"
+
+[dev-dependencies]
+rstest = {workspace = true}
