--- a/day-13/Cargo.toml
+++ b/day-13/Cargo.toml
@@ -8,3 +8,11 @@ edition = "2021"
 [dependencies]
 anyhow = { workspace = true }
 nom = { workspace = true }
+dhat = "0.3.2"
+
+[profile.release]
+debug = 1
+
+[features]
+dhat-heap = []   # if you are doing heap profiling
+dhat-ad-hoc = [] # if you are doing ad hoc profiling
